# song-vector-explorer

./: .gitignore  README.md  pyproject.toml
assets/lyrics/: 1.Die-For-You.txt  2.Binding-Lights.txt  3.Gods-Plan.txt  5.Waka-Waka.txt
assets/metadata/: 1.Die-For-You.pkl  2.Binding-Lights.pkl  3.Gods-Plan.pkl  4.Hips-dont-lie.pkl  5.Waka-Waka.pkl
assets/vectors/: 1.Die-For-You.npy  2.Binding-Lights.npy  3.Gods-Plan.npy  4.Hips-dont-lie.npy  5.Waka-Waka.npy
src/: embedding.py
