[project]
name = "song-vector-explorer"
version = "0.1.0"
description = "Explore song lyrics as interactive 3D vector spaces using OpenAI embeddings and TensorBoard visualization"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.0",
    "openai>=1.86.0",
    "tensorboard>=2.19.0",
    "torch>=2.7.1",
]

[tool.ruff.lint]
unfixable = [
    "F401", # unused import
    "F841", # unused variable
]

[tool.taskipy.tasks]
serve = "uv run tensorboard --logdir=logs"
